Api specification update
Updated api specification to correspondence with new response formats
Added trade_offers/history route
